# workshop-detect-secrets-in-repo

./: .env.example  README.md  github_mcp.ipynb  leaky_sample.py  main.py  pyproject.toml  secret-sample.bicep  test.txt
.github/workflows/: detect_secrets.yml
domain/: logging.py  models.py  settings.py  utils.py
domain/agents/: chunk_agregator.py  chunk_exporter.py  secrets_detector.py
samples/: secret_sample.bicep
